CSS light adjustments and improvings. Desktop media querie engaged (Navbar, research and filter OK) - To be fixed : img ratio on mobile device and info wrap on desktop device/high res (upper than 1437px)

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/* -------------General selectors-------------*/
+/*--------------------------Mobile first responsive design--------------------------*/
+/*-------------General selectors-------------*/
 *{
 	font-family: raleway,sans-serif;
 	font-size: 35px;
@@ -13,9 +14,6 @@ h1{
 	font-size: 50px;
 	margin-bottom: 20px;
 }
-h2{
-	font-size: 35px;
-}
 a{
 	text-decoration: none;
 	color : black;
@@ -25,7 +23,7 @@ article{
 	border:solid 3px #F2F2F2;
 	border-radius: 30px;
 	padding: 20px;
-	margin: 50px 40px 0px 40px;
+	margin: 40px 40px 0px 40px;
 	box-shadow: 0px 5px 50px rgba(0,0,0,.1);
 }
 section{
@@ -41,13 +39,13 @@ i, .active{
 	padding-right: 10px;
 }
 .popular_section h1, .hosting_section h1, .activity_section h1{
-	padding:40px 30px 20px 40px;
+	padding:30px 30px 20px 40px;
 }
 .popular_section, footer{
 	background: #F2F2F2;
 }
 
-/*-------------Header-------------*/
+/*-------------Header/NavBar-------------*/
 nav{
 	display: grid;
 	grid-auto-rows: 1fr 1fr;
@@ -57,7 +55,6 @@ nav{
 }
 .logo{
 	height: 100px;
-	text-align:left;
 	padding-left: 30px;
 }
 .nav_hosting, .nav_activity{
@@ -113,7 +110,7 @@ nav{
 	padding-left: 50px;
 	border:none;
 	font-weight: bold;	
-	font-size: 35px
+	font-size: 35px;
 }
 .search_section h1, .search_section p{
 	margin: 0 60px 20px 60px;
@@ -127,11 +124,10 @@ nav{
 	height: 120px;
 	padding: 20px 50px 20px 140px; 
 	font-weight: bold;
-	font-size: 35px;
 	background: white;
 	border: solid 5px #F2F2F2;
 	border-radius: 60px;
-	margin: 20px 20px 20px 0;	
+	margin: 20px 20px 20px 0;
 }
 .round_filter_svg{
 	position: absolute;
@@ -187,7 +183,7 @@ margin-left: 50px;
 .popular{
 	display: flex;
 	position: relative;
-}
+	}
 .popular img{
 	width:427px;
 	height: 285px;
@@ -204,13 +200,13 @@ margin-left: 50px;
 	line-height: 1.5;
 }
 .popular article{
-	height: 855px;
-	width:285px;	
+	width: 855px;
+	height:285px;	
 }
 .popular p, .popular strong, .hosting strong{
 	word-wrap: normal;
 	margin-bottom: 70px;
-	font-size: 30px
+	font-size: 30px;
 }
 
 /*-------------Hosting section-------------*/
@@ -225,10 +221,10 @@ margin-left: 50px;
 	border-radius: 30px 30px 0 0;
 }
 
-.hosting p, , .hosting strong{
+.hosting p, .hosting strong{
 	word-wrap: normal;
 	margin-bottom: 20px;
-	font-size: 30px
+	font-size: 30px;
 }
 
 .hosting aside{
@@ -246,16 +242,157 @@ margin-left: 50px;
 	margin: 20px 0 20px 40px;
 }
 
-/*-------------Actibity section-------------*/
+/*-------------Activity section-------------*/
+.activity_section article{
+	padding: 0;
+	position: relative;
+}
+.activity_section img{
+	width: 100%;
+	border-radius: 30px 30px 30px 30px;
+}
+.activity_section h2{
+	position: absolute;
+	background:white;
+	width: 100%;
+	height:100px;
+	bottom:0px;
+	border-radius: 0 0 30px 30px;
+	padding: 20px 0 0 50px;
+}
 
 /*-------------Footer-------------*/
 footer{
 	display: flex;
 	flex-direction: column;
-
 	margin-top: 80px;
-	padding: 40px  100px 40px 100px;
+	padding: 40px 100px 40px 100px;
 }
 footer a{
 	padding-bottom: 10px;
+}
+footer h2{
+	margin-bottom: 20px;
+}
+
+/*--------------------------Desktop responsive design--------------------------*/
+@media screen and (min-width: 1000px){ /*Breackpoint values to be reevaluated*/
+/*-------------General selectors-------------*/
+	*{
+		font-size: 17px;
+	}
+	
+/*-------------Header/NavBar-------------*/
+	nav{
+		position: relative;
+		display: flex;
+		justify-content: flex-end;
+		padding:0;
+		margin-bottom: 20px;
+		height: 40px;
+	}
+	.logo{
+		position: absolute;
+		top:0;
+		left: 0;
+		width: auto;
+		height:60px;
+	}
+	.nav_subscribe, .nav_hosting, .nav_activity{
+		
+		width: 150px;
+		padding: 20px 10px 0 10px;
+		font-size: 15px;
+	}
+	.nav_subscribe{
+		order:4;
+		margin-right: 50px;
+		text-align: center;
+	}	
+	.nav_hosting{
+		border-bottom: none;
+		border-top: solid 3px #0065FC;
+	}
+	.nav_activity{
+		border: none;
+		}
+
+/*-------------City search section-------------*/
+	.search_section h1{
+			font-size: 22px;
+			margin-bottom: 10px;
+			margin-top: 75px;
+	}
+
+	.fa-map-marker-alt{
+		line-height: 50px;
+	}
+	.search_btn{
+		margin : 10px 5% 10px 5%;
+		height: 50px;
+		width:560px;
+	}
+	.fa-search {
+		font-size: 0;
+		border-radius: 0 20px 20px 0;
+		line-height: 45px;
+		width: 130px;
+
+	}
+	.fa-search::before{
+		content: "Rechercher";
+		font-size: 17px;
+	}
+	.search_section input{
+		width:60%;
+		font-size: 17px;
+		padding-left: 20px;
+	}
+/*-------------Filter section-------------*/
+	.filter_section{
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		flex-wrap: wrap;   /*Line return must be improved for high res*/
+		margin-left: 60px;
+	}
+	.filter_btn h2{
+		line-height: 80px;
+	}
+	.filter_btn{
+		height:40px;
+		font-size: 17px;
+		margin: 5px -15px 5px 30px;
+		padding: 0 15px 0 60px;
+		border: solid 2px #F2F2F2;
+	}
+	.round_filter_svg{
+		padding: 12px;
+		left: -2px;
+		top: -2px;
+	}
+
+/*-------------Search info label-------------*/
+	.fa-info{
+		font-size: 17px;
+		margin-right: 0px;
+		padding: 10px 0px 0px 10px;
+	}
+	.info p{
+	padding-top: 0px;
+	line-height: 30px;
+	margin-left: 10px;
+	}
+
+
+/*-------------Hosting, Most popular and Activity main display-------------*/
+
+/*-------------Footer-------------*/
+
+/*--------------------------Tablet responsive design--------------------------*/
+@media screen and (min-width: 600px) and (max-width: 999){ /*Breackpoints values to be reevaluated*/
+
+	h1{
+		background: orange;
+	}
 }
